// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EjsAlgorithmRenderer Behavior should render scored algorithm 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>GWNS Algorithm</title>
  <style>
    .template {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    .template.switches__list,
    .template.outcomes__list {
      list-style: none;
      padding: 0;
    }

    .template.header__title {
      margin: 0;
      /* headline-medium */
      line-height: 36px;
      font-size: 28px;
      font-weight: 400;
    }

    .template.body__paragraph {
      margin-top: 16px;
      /* body-medium */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.25px;
      font-weight: 400;
    }

    .template.switches__list {
      margin-top: 16px;
    }

    .template.switches__list-item {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-top: 8px;
      user-select: none;
    }

    .template.switches__list-item:first-child {
      padding-top: 0;
    }

    .template.switches__input {
      height: 0px;
      width: 0px;
      visibility: hidden;
    }

    .template.switches__group-label,
    .template.switches__radio-label {
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 500;
    }

    .template.switches__radiogroup {
      position: relative;
      padding: 4px 8px 4px 8px;
      border-radius: 999px;
      outline: 1px solid black;
      overflow: hidden;
    }

    .template.switches__radio-label {
      display: inline-block;
      width: 2em;
      text-align: center;
    }

    .template.switches__radiogroup-bg {
      background-color: black;
      position: absolute;
      top: 0;
      width: 50%;
      height: 100%;
      z-index: -1;
      display: none;
    }

    .template.switches__input:checked+.template.switches__radio-label {
      color: white;
    }

    .template.switches__input--yes:checked~.template.switches__radiogroup-bg {
      display: block;
      left: 0;
    }

    .template.switches__input--no:checked~.template.switches__radiogroup-bg {
      display: block;
      right: 0;
    }

    .template.outcomes__list-item {
      margin-top: 8px;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
    }

    .template.outcomes__list-item:first-child {
      margin-top: 8px;
    }

    .template.outcomes__button {
      background-color: black;
      color: white;
      border-radius: 999px;
      height: 40px;
      padding: 0 24px;
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 500;
    }
  </style>
</head>

<body>
  <header>
    <h1 class="template header__title">GWNS Algorithm</h1>
  </header>
  <main>
    <p class="template body__paragraph">
      All need immediate Rx and activate brain attack team immediately. ABCT = (airway, breathing, circulation, time of stroke onset). Endotracheal intubation if compromised airway or GCS less than eight. Maintain SBP 140 to 180 mmHg. HR 60-100. Establish IV access and hydration is recommended based on height/weight and clinical scenarios
    </p>
    <ul class="template switches__list">
      
      <li class="template switches__list-item">
        <span class="template switches__group-label">Gaze Deviation</span>
        <div class="template switches__radiogroup">
          <input class="template switches__input switches__input--yes" name="switch-0" id="switch-0-yes" type="radio">
          <label class="template switches__radio-label switches__radio-label--yes" for="switch-0-yes">Yes</label>
          <input class="template switches__input switches__input--no" name="switch-0" id="switch-0-no" type="radio">
          <label class="template switches__radio-label switches__radio-label--no" for="switch-0-no">No</label>
          <div class="template switches__radiogroup-bg"></div>
        </div>
      </li>
      
      <li class="template switches__list-item">
        <span class="template switches__group-label">Weakness</span>
        <div class="template switches__radiogroup">
          <input class="template switches__input switches__input--yes" name="switch-1" id="switch-1-yes" type="radio">
          <label class="template switches__radio-label switches__radio-label--yes" for="switch-1-yes">Yes</label>
          <input class="template switches__input switches__input--no" name="switch-1" id="switch-1-no" type="radio">
          <label class="template switches__radio-label switches__radio-label--no" for="switch-1-no">No</label>
          <div class="template switches__radiogroup-bg"></div>
        </div>
      </li>
      
      <li class="template switches__list-item">
        <span class="template switches__group-label">Neglect/Disregard/Extinction</span>
        <div class="template switches__radiogroup">
          <input class="template switches__input switches__input--yes" name="switch-2" id="switch-2-yes" type="radio">
          <label class="template switches__radio-label switches__radio-label--yes" for="switch-2-yes">Yes</label>
          <input class="template switches__input switches__input--no" name="switch-2" id="switch-2-no" type="radio">
          <label class="template switches__radio-label switches__radio-label--no" for="switch-2-no">No</label>
          <div class="template switches__radiogroup-bg"></div>
        </div>
      </li>
      
      <li class="template switches__list-item">
        <span class="template switches__group-label">Speech impairment</span>
        <div class="template switches__radiogroup">
          <input class="template switches__input switches__input--yes" name="switch-3" id="switch-3-yes" type="radio">
          <label class="template switches__radio-label switches__radio-label--yes" for="switch-3-yes">Yes</label>
          <input class="template switches__input switches__input--no" name="switch-3" id="switch-3-no" type="radio">
          <label class="template switches__radio-label switches__radio-label--no" for="switch-3-no">No</label>
          <div class="template switches__radiogroup-bg"></div>
        </div>
      </li>
      
    </ul>
    <hr>
    
  </main>
</body>

</html>"
`;

exports[`EjsAlgorithmRenderer Behavior should render text algorithm 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>ABCTs</title>
  <style>
    .template {
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }

    .template.switches__list,
    .template.outcomes__list {
      list-style: none;
      padding: 0;
    }

    .template.header__title {
      margin: 0;
      /* headline-medium */
      line-height: 36px;
      font-size: 28px;
      font-weight: 400;
    }

    .template.body__paragraph {
      margin-top: 16px;
      /* body-medium */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.25px;
      font-weight: 400;
    }

    .template.switches__list {
      margin-top: 16px;
    }

    .template.switches__list-item {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-top: 8px;
      user-select: none;
    }

    .template.switches__list-item:first-child {
      padding-top: 0;
    }

    .template.switches__input {
      height: 0px;
      width: 0px;
      visibility: hidden;
    }

    .template.switches__group-label,
    .template.switches__radio-label {
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 500;
    }

    .template.switches__radiogroup {
      position: relative;
      padding: 4px 8px 4px 8px;
      border-radius: 999px;
      outline: 1px solid black;
      overflow: hidden;
    }

    .template.switches__radio-label {
      display: inline-block;
      width: 2em;
      text-align: center;
    }

    .template.switches__radiogroup-bg {
      background-color: black;
      position: absolute;
      top: 0;
      width: 50%;
      height: 100%;
      z-index: -1;
      display: none;
    }

    .template.switches__input:checked+.template.switches__radio-label {
      color: white;
    }

    .template.switches__input--yes:checked~.template.switches__radiogroup-bg {
      display: block;
      left: 0;
    }

    .template.switches__input--no:checked~.template.switches__radiogroup-bg {
      display: block;
      right: 0;
    }

    .template.outcomes__list-item {
      margin-top: 8px;
    }

    .template.outcomes__list-item:first-child {
      margin-top: 8px;
    }

    .template.outcomes__button {
      background-color: white;
      border: 1px solid black;
      border-radius: 999px;
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 500;
    }

    .template.outcomes__list-item {
      margin-top: 8px;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
    }

    .template.outcomes__list-item:first-child {
      margin-top: 8px;
    }

    .template.outcomes__button {
      background-color: black;
      color: white;
      border-radius: 999px;
      height: 40px;
      padding: 0 24px;
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 500;
    }
  </style>
</head>

<body>
  <header>
    <h1 class="template header__title">ABCTs</h1>
  </header>
  <main>
    <p class="template body__paragraph">
      ABCT = (airway, breathing, circulation, time of stroke onset)
    </p>
    <hr>
    
    <ul class="template outcomes__list">
      
      <li class="template outcomes__list-item">
        <button class="template outcomes__button">Stable</button>
      </li>
      
      <li class="template outcomes__list-item">
        <button class="template outcomes__button">Not Stable</button>
      </li>
      
    </ul>
    
  </main>
</body>

</html>"
`;
